--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.4.3",
+    "connect-flash": "^0.1.1",
     "cron": "^1.1.0",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
@@ -18,6 +19,8 @@
     "moment": "^2.14.1",
     "mongo": "^0.1.0",
     "mongodb": "^2.2.8",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "plaid": "^1.0.11",
     "request": "^2.74.0",
     "request-promise": "^4.1.1"
