--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "plaid": "^1.0.11",
     "request": "^2.74.0",
     "request-promise": "^4.1.1"
-  }
+  },
+
+  "devDependencies": {
+    "jshint": "^2.9.3"
+  },
 }
