--- a/package.json
+++ b/package.json
@@ -10,21 +10,34 @@
   "author": "HacksNextDoor",
   "license": "ISC",
   "dependencies": {
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
     "bluebird": "^3.4.3",
+    "body-parser": "^1.15.2",
     "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
+    "express-react-views": "^0.10.2",
+    "express-session": "^1.14.1",
     "glob": "^7.0.6",
     "moment": "^2.14.1",
     "mongo": "^0.1.0",
     "mongodb": "^2.2.8",
+    "mongoose": "^4.6.2",
+    "morgan": "^1.7.0",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
     "request": "^2.74.0",
-    "request-promise": "^4.1.1"
+    "request-promise": "^4.1.1",
+    "webpack": "^1.13.2"
   },
-
   "devDependencies": {
     "jshint": "^2.9.3"
-  },
+  }
 }
