--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "mongo": "^0.1.0",
     "mongodb": "^2.2.8",
     "passport": "^0.3.2",
+    "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
     "request": "^2.74.0",
     "request-promise": "^4.1.1"
   },
-
   "devDependencies": {
     "jshint": "^2.9.3"
-  },
+  }
 }
